deployment/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hamada-site
  labels:
    name: hamada-site
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: hamada-site
  labels:
    app: hamada-site 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: hamada-site
  template:
    metadata:
      labels:
        app: hamada-site 
    spec:
      containers:
      - name: main-pod 
        image: ghcr.io/11mhg/hamada_computer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: hamada-http-svc
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 6
---
apiVersion: v1
kind: Service
metadata:
  name: hamada-site-svc
  namespace: hamada-site
spec:
  selector:
    app: hamada-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: hamada-http-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hamada-site-ingress
  namespace: hamada-site
  labels:
    app: hamada-site
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
    - host: staging.gasmallah.ca
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hamada-site-svc
              port:
                number: 80
